// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should see the right expense 1`] = `
<div>
  id == undefined ? (
  <p>
    Empty object.
  </p>
  ) : (
  <p>
    <Link
      to="/edit/1"
    >
      <h3>
        Gum
      </h3>
    </Link>
    <p>
      195
       - 
      0
    </p>
  </p>
  )
</div>
`;

exports[`Should see the right expense 2`] = `
<div>
  id == undefined ? (
  <p>
    Empty object.
  </p>
  ) : (
  <p>
    <Link
      to="/edit/undefined"
    >
      <h3 />
    </Link>
    <p>
       - 
    </p>
  </p>
  )
</div>
`;
